# rabbits

./: CMakeLists.txt  Doxyfile.in  RabbitsConfig.cmake.in  RabbitsConfig_installless.cmake.in
backends/: CMakeLists.txt
backends/char/: CMakeLists.txt
backends/char/graphical/: CMakeLists.txt  graphical.cc  graphical.h  graphical.yml
backends/char/graphical/res/: CMakeLists.txt  index.html  main.js
backends/char/null/: CMakeLists.txt  null.h  null.yml
backends/char/serial/: CMakeLists.txt  serial.cc  serial.h  serial.yml
backends/char/socket/: CMakeLists.txt  socket.cc  socket.h  socket.yml
backends/char/stdio/: CMakeLists.txt  stdio.cc  stdio.h  stdio.yml
backends/framebuffer/ui/: CMakeLists.txt  ui.cc  ui.h  ui.yml
backends/stub/: CMakeLists.txt  bool.cc  bool.h  bool.yml  double.yml  generator.h  stub.h  stub.inc.yml
cmake/: FindRubyInterp.cmake  FindSystemC.cmake  Findlibfdt.cmake  rabbits_add_files.cmake  rabbits_components.cmake
components/: CMakeLists.txt
components/bus/: CMakeLists.txt  bus_interconnect.h  bus_interconnect.yml  interconnect.h
components/memory/: CMakeLists.txt  memory.cc  memory.h  memory.yml
include/rabbits/: arith.h  config.h.in  logger.h  rabbits.h  rabbits_exception.h  simu.h
include/rabbits/backend/: factory.h  manager.h
include/rabbits/channel/: channel.h  ethernet.h  i2c.h
include/rabbits/component/: bus.h  component.h  component_base.h  connection_strategy.h  debug_initiator.h  factory.h  irq.h  manager.h  master.h  parameters.h  port.h  slave.h
include/rabbits/component/channel/: char_dev.h  framebuffer.h  i2c.h  spi.h
include/rabbits/component/connection_strategy/: char_dev.h  framebuffer.h  i2c.h  signal.h  spi.h  tlm_initiator_bus.h  tlm_initiator_target.h  tlm_target_bus.h  vector.h  vector_impl.h
include/rabbits/component/parameter/: param_data.h  parameter.h
include/rabbits/component/port/: char.h  framebuffer.h  i2c.h  in.h  inout.h  out.h  spi.h  tlm_bus.h  tlm_initiator.h  tlm_target.h  uart.h  vector.h
include/rabbits/config/: has_config.h  manager.h  simu.h  static_loader.h
include/rabbits/datatypes/: address_range.h  framebuffer.h  indexed_pool.h  stringifier.h  tlm.h  typeid.h
include/rabbits/dynloader/: dynlib.h  dynloader.h
include/rabbits/loader/: bootloader.h  loader.h
include/rabbits/logger/: datatypes.h  format.h  has_logger.h  has_logger_iface.h  logger.h  wrapper.h
include/rabbits/module/: factory.h  has_params.h  manager.h  module.h  namespace.h  parameters.h
include/rabbits/module/parameter/: param_data.h  parameter.h
include/rabbits/platform/: builder.h  description.h  parser.h
include/rabbits/platform/parser/: backend.h  binding.h  component.h  exceptions.h  module.h  node.h  platform.h  plugin.h
include/rabbits/platform/parser/impl/: backend.h  binding.h  component.h  module.h  node.h  platform.h  plugin.h
include/rabbits/plugin/: factory.h  hook.h  manager.h  plugin.h
include/rabbits/resource/: manager.h
include/rabbits/test/: comparator.h  framebuffer_tester.h  slave_tester.h  test.h
include/rabbits/ui/: chooser.h  ui.h  ui_fb.h  ui_webkit.h  view.h
include/rabbits/ui/view/: framebuffer.h  webkit.h
include/rabbits/utils/loader/: helper.h  loader.h
include/rabbits/utils/pixel/: converter.h  pixel.h
librabbits/: CMakeLists.txt  Makefile.objs  exception.cc  logger.cc  rabbits-common.h  simu.cc
librabbits/channel/: CMakeLists.txt  ethernet.cc
librabbits/component/: CMakeLists.txt  Makefile.objs  debug_initiator.cc  factory.cc  manager.cc  master.cc  parameters.cc  port.cc  slave.cc
librabbits/config/: CMakeLists.txt  manager.cc  simu.cc
librabbits/config/simu/: CMakeLists.txt  posix.cc  win32.cc
librabbits/datatypes/: CMakeLists.txt  typeid.cc
librabbits/dynloader/: CMakeLists.txt  dynlib.cc  dynlib_posix.cc  dynlib_posix.h  dynloader.cc
librabbits/loader/: CMakeLists.txt  Makefile.objs  bootloader.cc
librabbits/logger/: CMakeLists.txt  format.cc  logger.cc  rlutil.h  wrapper.cc
librabbits/module/: CMakeLists.txt  namespace.cc  parameters.cc
librabbits/platform/: CMakeLists.txt  Makefile.objs  builder.cc  description.cc
librabbits/plugin/: CMakeLists.txt  Makefile.objs  factory.cc  manager.cc
librabbits/resource/: CMakeLists.txt  manager.cc
librabbits/test/: CMakeLists.txt  entry.cc
librabbits/ui/: CMakeLists.txt  Makefile.objs  chooser.cc  ui.cc
librabbits/ui/dummy/: CMakeLists.txt  Makefile.objs  ui.cc  ui.h  ui_fb.cc  ui_fb.h
librabbits/ui/qt/: CMakeLists.txt  events.h  surface.cc  surface.h  tester.cc  tester.h  ui.cc  ui.h  ui_fb.cc  ui_fb.h  ui_webkit.cc  ui_webkit.h  view.cc  view.h
librabbits/ui/qt/view/: CMakeLists.txt  framebuffer.cc  framebuffer.h  webkit.cc  webkit.h
librabbits/ui/sdl/: Makefile.objs  ui.cc  ui.h  ui_fb.cc  ui_fb.h
librabbits/utils/loader/: CMakeLists.txt  loader.cc
librabbits/utils/loader/helper/: CMakeLists.txt  binary.cc  binary.h  elf.cc  elf.h
plugins/: CMakeLists.txt
plugins/bootloader/: CMakeLists.txt  bootloader.cc  bootloader.h  bootloader.yml
plugins/chardev-connection-helper/: CMakeLists.txt  chardev-connection-helper.cc  chardev-connection-helper.h  chardev-connection-helper.yml
plugins/connection-helper/: CMakeLists.txt  connection-helper.cc  connection-helper.h  connection-helper.yml
plugins/json_console/: CMakeLists.txt  backend.cc  backend.h  client.cc  client.h  json_console.cc  json_console.h  json_console.yml
rabbits/: CMakeLists.txt  cmdline.h  rabbits.cc  usage.cc  usage.h
rabbits/help/: CMakeLists.txt  formatter.h  help.h  module.cc  platform.cc  systemc_hierarchy.cc  usage.cc  usage.h
scripts/: gen-factory.rb  list-platforms.rb
tests/platform/: CMakeLists.txt
tests/platform/description/: CMakeLists.txt  json.cc  map.cc  scalar.cc  vector.cc
tests/platform/parser/: CMakeLists.txt  backend.cc  bindings.cc  common.h  component.cc  platform.cc
